Closed Bug 1753642 Opened 2 years ago Closed 2 years ago

Utility process hard kill can leak?

Categories

(Core :: Security: Process Sandboxing, defect)

defect

Tracking

()

RESOLVED FIXED
99 Branch
Tracking Status
firefox99 --- fixed

People

(Reporter: gerard-majax, Assigned: gerard-majax)

References

(Blocks 1 open bug)

Details

Attachments

(2 files)

No description provided.
Pushed by alissy@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/cd8c65b9e854
Add test of hard kill and clean shutdown for UtilityProcess r=nika
https://hg.mozilla.org/integration/autoland/rev/81ce6c343d13
Ensure UtilityProcessHost cleanup in unexpected shutdown r=nika
Status: NEW → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 99 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: