Bug 1753642 - Ensure UtilityProcessHost cleanup in unexpected shutdown r=nika

Differential Revision: https://phabricator.services.mozilla.com/D137876